Add options Stage

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
         <script src="src/textButton.js"></script>
         <script src="src/menuStage.js"></script>
         <script src="src/landerStage.js"></script>
+        <script src="src/optionsStage.js"></script>
     </head>
     <body>
         <div id="game"></div>
