--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,11 @@
         <title>Rocket</title>
 	<script src="node_modules/phaser/build/phaser.min.js"></script>
         <script src="src/game.js"></script>
-        <script src="src/textButton.js"></script>
         <script src="src/menuStage.js"></script>
         <script src="src/landerStage.js"></script>
+        <script src="src/sun.js"></script>
+        <script src="src/planet.js"></script>
+        <script src="src/rocket.js"></script>
     </head>
     <body>
         <div id="game"></div>
