removed margin in body

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
         <script src="src/planet.js"></script>
         <script src="src/rocket.js"></script>
     </head>
-    <body>
+    <body style="margin: 0px;">
         <div id="game"></div>
         <script type="text/javascript">
             var game = new rocket.Game('game');
