--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
             }
         </style>
         <meta charset="UTF-8" />
-        <title>Rocket</title>
+        <title>ASTRONOMER</title>
         <link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
         <script src="node_modules/phaser/build/phaser.min.js"></script>
         <script src="src/game.js"></script>
