Rename rocket namespace to astro.

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
         <div class="fontPreload" style="font-family: Roboto Mono;">.</div>
         <div id="game"></div>
         <script type="text/javascript">
-            var game = new rocket.Game('game');
+            var game = new astro.Game('game');
             game.run();
         </script>
     </body>
