--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,8 @@
         <script src="src/planet.js"></script>
         <script src="src/rocket.js"></script>
         <script src="src/text.js"></script>
+        <script src="src/camera.js"></script>
+        <script src="src/starfield.js"></script>
     </head>
     <body style="margin: 0px;">
         <div class="fontPreload" style="font-family: Roboto Mono;">.</div>
