Add rocket menu

--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
         <script src="src/text.js"></script>
         <script src="src/camera.js"></script>
         <script src="src/starfield.js"></script>
+        <script src="src/rocket_menu.js"></script>
     </head>
     <body style="margin: 0px;">
         <div class="fontPreload" style="font-family: Roboto Mono;">.</div>
