Add new planet object, extending phaser sprite.

--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
         <script src="src/menuStage.js"></script>
         <script src="src/landerStage.js"></script>
         <script src="src/planet.js"></script>
+        <script src="src/planet2.js"></script>
         <script src="src/rocket.js"></script>
         <script src="src/text.js"></script>
         <script src="src/camera.js"></script>
