--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
         <script src="src/camera.js"></script>
         <script src="src/starfield.js"></script>
         <script src="src/rocket_menu.js"></script>
+        <script src="config.js"></script>
     </head>
     <body style="margin: 0px;">
         <div class="fontPreload" style="font-family: Roboto Mono;">.</div>
